[package]
authors = ["ihciah <ihciah@gmail.com>"]
edition = "2021"
name = "mini-rust-runtime"
version = "0.1.0"
license = "MIT"

[dependencies]
polling = "2"
socket2 = "0.4"
scoped-tls = "1"
futures = "0.3"
waker-fn = "1"
pin-utils = "0.1"
rustc-hash = "1"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.5.9"
